--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
+  --custom-main: #5bc74d;
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -26,6 +27,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
+  --custom: #5bc74d;
   --primary: #007bff;
   --secondary: #6c757d;
   --success: #28a745;
@@ -1703,6 +1705,26 @@ pre code {
   background-color: rgba(0, 0, 0, 0.075);
 }
 
+.table-custom,
+.table-custom > th,
+.table-custom > td {
+  background-color: #d1efcd;
+}
+.table-custom th,
+.table-custom td,
+.table-custom thead th,
+.table-custom tbody + tbody {
+  border-color: #aae2a2;
+}
+
+.table-hover .table-custom:hover {
+  background-color: #bfe9ba;
+}
+.table-hover .table-custom:hover > td,
+.table-hover .table-custom:hover > th {
+  background-color: #bfe9ba;
+}
+
 .table-primary,
 .table-primary > th,
 .table-primary > td {
@@ -2422,6 +2444,36 @@ fieldset:disabled a.btn {
   pointer-events: none;
 }
 
+.btn-custom {
+  color: #212529;
+  background-color: #5bc74d;
+  border-color: #5bc74d;
+}
+.btn-custom:hover {
+  color: #fff;
+  background-color: #47b539;
+  border-color: #43ab36;
+}
+.btn-custom:focus, .btn-custom.focus {
+  color: #fff;
+  background-color: #47b539;
+  border-color: #43ab36;
+  box-shadow: 0 0 0 0.2rem rgba(82, 175, 72, 0.5);
+}
+.btn-custom.disabled, .btn-custom:disabled {
+  color: #212529;
+  background-color: #5bc74d;
+  border-color: #5bc74d;
+}
+.btn-custom:not(:disabled):not(.disabled):active, .btn-custom:not(:disabled):not(.disabled).active, .show > .btn-custom.dropdown-toggle {
+  color: #fff;
+  background-color: #43ab36;
+  border-color: #3fa133;
+}
+.btn-custom:not(:disabled):not(.disabled):active:focus, .btn-custom:not(:disabled):not(.disabled).active:focus, .show > .btn-custom.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(82, 175, 72, 0.5);
+}
+
 .btn-primary {
   color: #fff;
   background-color: #007bff;
@@ -2660,6 +2712,31 @@ fieldset:disabled a.btn {
 }
 .btn-dark:not(:disabled):not(.disabled):active:focus, .btn-dark:not(:disabled):not(.disabled).active:focus, .show > .btn-dark.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5);
+}
+
+.btn-outline-custom {
+  color: #5bc74d;
+  border-color: #5bc74d;
+}
+.btn-outline-custom:hover {
+  color: #212529;
+  background-color: #5bc74d;
+  border-color: #5bc74d;
+}
+.btn-outline-custom:focus, .btn-outline-custom.focus {
+  box-shadow: 0 0 0 0.2rem rgba(91, 199, 77, 0.5);
+}
+.btn-outline-custom.disabled, .btn-outline-custom:disabled {
+  color: #5bc74d;
+  background-color: transparent;
+}
+.btn-outline-custom:not(:disabled):not(.disabled):active, .btn-outline-custom:not(:disabled):not(.disabled).active, .show > .btn-outline-custom.dropdown-toggle {
+  color: #212529;
+  background-color: #5bc74d;
+  border-color: #5bc74d;
+}
+.btn-outline-custom:not(:disabled):not(.disabled):active:focus, .btn-outline-custom:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-custom.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(91, 199, 77, 0.5);
 }
 
 .btn-outline-primary {
@@ -4651,6 +4728,19 @@ a.badge:hover, a.badge:focus {
   border-radius: 10rem;
 }
 
+.badge-custom {
+  color: #212529;
+  background-color: #5bc74d;
+}
+a.badge-custom:hover, a.badge-custom:focus {
+  color: #212529;
+  background-color: #43ab36;
+}
+a.badge-custom:focus, a.badge-custom.focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(91, 199, 77, 0.5);
+}
+
 .badge-primary {
   color: #fff;
   background-color: #007bff;
@@ -4799,6 +4889,18 @@ a.badge-dark:focus, a.badge-dark.focus {
   z-index: 2;
   padding: 0.75rem 1.25rem;
   color: inherit;
+}
+
+.alert-custom {
+  color: #2f6728;
+  background-color: #def4db;
+  border-color: #d1efcd;
+}
+.alert-custom hr {
+  border-top-color: #bfe9ba;
+}
+.alert-custom .alert-link {
+  color: #1e421a;
 }
 
 .alert-primary {
@@ -5140,6 +5242,20 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 .list-group-flush > .list-group-item:last-child {
   border-bottom-width: 0;
+}
+
+.list-group-item-custom {
+  color: #2f6728;
+  background-color: #d1efcd;
+}
+.list-group-item-custom.list-group-item-action:hover, .list-group-item-custom.list-group-item-action:focus {
+  color: #2f6728;
+  background-color: #bfe9ba;
+}
+.list-group-item-custom.list-group-item-action.active {
+  color: #fff;
+  background-color: #2f6728;
+  border-color: #2f6728;
 }
 
 .list-group-item-primary {
@@ -6009,6 +6125,16 @@ a.close.disabled {
   vertical-align: text-top !important;
 }
 
+.bg-custom {
+  background-color: #5bc74d !important;
+}
+
+a.bg-custom:hover, a.bg-custom:focus,
+button.bg-custom:hover,
+button.bg-custom:focus {
+  background-color: #43ab36 !important;
+}
+
 .bg-primary {
   background-color: #007bff !important;
 }
@@ -6135,6 +6261,10 @@ button.bg-dark:focus {
 
 .border-left-0 {
   border-left: 0 !important;
+}
+
+.border-custom {
+  border-color: #5bc74d !important;
 }
 
 .border-primary {
@@ -9700,6 +9830,14 @@ button.bg-dark:focus {
   color: #fff !important;
 }
 
+.text-custom {
+  color: #5bc74d !important;
+}
+
+a.text-custom:hover, a.text-custom:focus {
+  color: #3c9830 !important;
+}
+
 .text-primary {
   color: #007bff !important;
 }
@@ -9909,8 +10047,43 @@ h3 {
 
 body {
   background-color: #222020;
-  color: white;
+  color: #e7e7e7;
   font-family: "Nokia Cellphone FC";
+}
+
+#no-guess {
+  color: #222020;
+  text-shadow: 4px 4px 2px #706f6f;
+}
+
+.main-title {
+  font-size: 4rem;
+  text-shadow: 4px 4px 2px #3a3a3a, 4px 6px 3px #3cff00;
+}
+@media (max-width: 575.98px) {
+  .main-title {
+    font-size: 3rem;
+  }
+}
+
+.q-box {
+  box-shadow: 8px 0px 0px 0px #6ebb4b, 0px 8px 0px 0px #167e30, -8px 0px 0px 0px #026e11, 0px 0px 0px 8px #6ff163, inset 3px 0px 23px 19px rgba(0, 0, 0, 0.46), inset 5px -6px 25px 10px rgba(0, 0, 0, 0.46);
+}
+
+.right-side > div p:nth-child(1) {
+  letter-spacing: 2px;
+  white-space: nowrap;
+}
+
+#btn-again:hover,
+#btn-check:hover,
+#btn-again:focus,
+#btn-check:focus {
+  background-color: rgba(255, 0, 0, 0.582);
+}
+
+input[placeholder] {
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
