--- a/scss/app.scss
+++ b/scss/app.scss
@@ -4,12 +4,12 @@
 @import './variables';
 
 body {
-  background-color: rgb(34, 32, 32);
+  background-color: #222020;
   color: rgb(231, 231, 231);
   font-family: 'Nokia Cellphone FC';
 }
 
-#no-guess {
+#q-box {
   color: rgb(34, 32, 32);
   text-shadow: 4px 4px 2px rgb(112, 111, 111);
 }
@@ -24,10 +24,8 @@ body {
 }
 
 .q-box {
-  box-shadow: 8px 0px 0px 0px #6ebb4b, 0px 8px 0px 0px #167e30,
-    -8px 0px 0px 0px #026e11, 0px 0px 0px 8px #6ff163,
-    inset 3px 0px 23px 19px rgba(0, 0, 0, 0.46),
-    inset 5px -6px 25px 10px rgba(0, 0, 0, 0.46);
+  box-shadow: 8px 0px 0px 0px #6ebb4b, 0px 8px 0px 0px #167e30, -8px 0px 0px 0px #026e11, 0px 0px 0px 8px #6ff163,
+    inset 3px 0px 23px 19px rgba(0, 0, 0, 0.46), inset 5px -6px 25px 10px rgba(0, 0, 0, 0.46);
 }
 
 .right-side > div p:nth-child(1) {
@@ -35,13 +33,23 @@ body {
   white-space: nowrap;
 }
 
-#btn-again:hover,
 #btn-check:hover,
-#btn-again:focus,
 #btn-check:focus {
   background-color: rgba(255, 0, 0, 0.582);
 }
 
 input[placeholder] {
   text-align: center;
+}
+
+body::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+body::-webkit-scrollbar-track {
+  background: rgba(0, 0, 0, 0.534);
+}
+
+body::-webkit-scrollbar-thumb {
+  background: $primary;
 }
