--- a/css/style.css
+++ b/css/style.css
@@ -10084,6 +10084,22 @@ input[placeholder] {
   text-align: center;
 }
 
+#input-number::before {
+  content: ">>";
+  margin-top: 7px;
+  font-size: 1.5rem;
+  color: var(--primary);
+  padding: 5px;
+}
+
+#input-number::after {
+  content: "<<";
+  margin-top: 7px;
+  font-size: 1.5rem;
+  color: var(--primary);
+  padding: 5px;
+}
+
 body::-webkit-scrollbar {
   width: 0.5rem;
 }
@@ -10094,13 +10110,6 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background: var(--primary);
-}
-
-label {
-  margin-top: 7px;
-  font-size: 1.5rem;
-  color: var(--primary);
-  padding: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
