--- a/css/style.css
+++ b/css/style.css
@@ -10112,4 +10112,9 @@ body::-webkit-scrollbar-thumb {
   background: var(--primary);
 }
 
+.main {
+  width: 100%;
+  max-width: 1500px;
+}
+
 /*# sourceMappingURL=style.css.map */
