--- a/css/style.css
+++ b/css/style.css
@@ -10085,7 +10085,7 @@ input[placeholder] {
   text-align: center;
 }
 
-#input-number::before {
+.user-input::before {
   content: ">>";
   margin-top: 7px;
   font-size: 1.5rem;
@@ -10093,7 +10093,7 @@ input[placeholder] {
   padding: 5px;
 }
 
-#input-number::after {
+.user-input::after {
   content: "<<";
   margin-top: 7px;
   font-size: 1.5rem;
