--- a/scss/app.scss
+++ b/scss/app.scss
@@ -45,7 +45,7 @@ input[placeholder] {
   text-align: center;
 }
 
-#input-number::before {
+.user-input::before {
   content: '>>';
   margin-top: 7px;
   font-size: 1.5rem;
@@ -53,7 +53,7 @@ input[placeholder] {
   padding: 5px;
 }
 
-#input-number::after {
+.user-input::after {
   content: '<<';
   margin-top: 7px;
   font-size: 1.5rem;
