--- a/css/style.css
+++ b/css/style.css
@@ -10115,7 +10115,8 @@ legend {
   font-size: 1.1rem;
   background-color: #737873a8;
   padding: 6px 11px;
-  color: #5ac64c;
+  color: #57af4c;
+  text-shadow: 3px 3px 1px black;
   box-shadow: inset -2px 5px 15px 12px rgba(0, 0, 0, 0.46), 6px 0px 7px 4px rgba(0, 0, 0, 0.46);
 }
 
@@ -10127,9 +10128,6 @@ fieldset {
   border: 5px inset #4d4c4c;
   overflow: hidden;
 }
-fieldset p {
-  color: #5ac64c;
-}
 fieldset::before {
   content: "";
   background: inherit;
@@ -10138,9 +10136,12 @@ fieldset::before {
   right: 2px;
   top: 0px;
   bottom: 6px;
-  background-color: #4343434a;
+  background-color: #43434308;
   box-shadow: inset -15px -4px 20px 2px #37f237ab;
   z-index: 1;
+}
+fieldset p {
+  color: #5ac64c;
 }
 
 .user-input::before {
