--- a/scss/app.scss
+++ b/scss/app.scss
@@ -2,7 +2,7 @@
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
 @import './variables';
-@import './content-locker';
+@import './top-header';
 
 body {
   background-color: #222020;
