--- a/css/style.css
+++ b/css/style.css
@@ -10045,26 +10045,23 @@ h3 {
   --primary: rgb(42, 179, 60);
 }
 
-.sociallocker-links > a:nth-child(2) {
+.social-links > a {
   color: var(--primary);
   text-decoration: none;
 }
-.sociallocker-links > a:first-child {
-  color: var(--primary);
-  text-decoration: none;
-}
-.sociallocker-links > a:first-child span {
+.social-links span {
   color: white;
 }
-.sociallocker-links > a:first-child i {
+.social-links i {
   background-color: var(--primary);
   color: #fff;
   text-shadow: 4px 4px 2px #3a3a3a, 4px 6px 3px #3cff00;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 4px 15px 4px 15px;
   font-size: 2rem;
+}
+.social-links > a > img {
+  width: 45px;
+  height: 45px;
 }
 
 body {
