--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,8 +1,19 @@
+// site fonts
 @import './fonts';
 
+//font awesome icos
+@import '../node_modules/@fortawesome/fontawesome-free/scss/brands.scss';
+@import '../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '../node_modules/@fortawesome/fontawesome-free/scss/regular.scss';
+@import '../node_modules/@fortawesome/fontawesome-free/scss/solid.scss';
+
+//bootstrap
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
+@import './custom-bootstrap-classes';
+
 @import './variables';
 @import './top-header';
+@import './footer';
 
 body {
   background-color: #222020;
