--- a/scss/app.scss
+++ b/scss/app.scss
@@ -13,7 +13,7 @@
 
 @import './variables';
 @import './top-header';
-@import './footer';
+@import './sociallocker';
 
 body {
   background-color: #222020;
