--- a/scss/_top-header.scss
+++ b/scss/_top-header.scss
@@ -1,23 +1,40 @@
-.social-links {
-  > a {
-    color: $primary;
+.header-top-wrapper {
+  a {
+    color: $white;
     text-decoration: none;
+
+    .highscore-ico {
+      font-size: 25px;
+      font-style: normal;
+    }
   }
 
-  span {
-    color: white;
-  }
+  .fb-box {
+    &:hover .fb-share {
+      transform: scale(1.7);
+    }
+    position: relative;
 
-  i {
-    background-color: $primary;
-    color: #fff;
-    text-shadow: 4px 4px 2px rgb(58, 58, 58), 4px 6px 3px rgb(60, 255, 0);
-    padding: 4px 15px 4px 15px;
-    font-size: 2rem;
-  }
+    p {
+      position: absolute;
+      bottom: -21px;
+      right: -88px;
+    }
+    a > p > span {
+      color: $primary;
+    }
 
-  > a > img {
-    width: 45px;
-    height: 45px;
+    .fb-share {
+      background-color: $primary;
+      color: #fff;
+      text-shadow: 4px 4px 2px rgb(58, 58, 58), 4px 6px 3px rgb(60, 255, 0);
+      padding: 4px 15px 4px 15px;
+      font-size: 2rem;
+    }
+
+    > a > img {
+      width: 45px;
+      height: 45px;
+    }
   }
 }
