--- a/scss/app.scss
+++ b/scss/app.scss
@@ -12,7 +12,7 @@
 @import './custom-bootstrap-classes';
 
 @import './variables';
-@import './top-header';
+@import './header-top-wrapper';
 @import './sociallocker';
 
 body {
