--- a/scss/app.scss
+++ b/scss/app.scss
@@ -48,13 +48,12 @@ body {
     .q-box {
       #q-box {
         color: #222020;
-        text-shadow: 4px 4px 2px rgb(112, 111, 111);
+        text-shadow: 3px -3px 2px #737070, 6px -5px 4px #3cff00;
       }
 
       border: 7px inset hsla(0, 10%, 8%, 0.6);
-      box-shadow: 8px 0px 0px 0px #6ebb4b, 0px 8px 0px 0px #167e30,
-        -8px 0px 0px 0px #026e11, 0px 0px 0px 8px #6ff163,
-        inset 3px 0px 23px 19px rgba(0, 0, 0, 0.46),
+      box-shadow: 8px 0px 0px 0px #6ebb4b, 0px 8px 0px 0px #167e30, -8px 0px 0px 0px #026e11,
+        0px 0px 0px 8px #6ff163, inset 3px 0px 23px 19px rgba(0, 0, 0, 0.46),
         inset 5px -6px 25px 10px rgba(0, 0, 0, 0.46);
     }
   }
@@ -85,8 +84,7 @@ legend {
   padding: 6px 11px;
   color: #57af4c;
   text-shadow: 3px 3px 1px black;
-  box-shadow: inset -2px 5px 15px 12px rgba(0, 0, 0, 0.46),
-    6px 0px 7px 4px rgba(0, 0, 0, 0.46);
+  box-shadow: inset -2px 5px 15px 12px rgba(0, 0, 0, 0.46), 6px 0px 7px 4px rgba(0, 0, 0, 0.46);
 }
 
 .right-side {
