--- a/scss/_header-top-wrapper.scss
+++ b/scss/_header-top-wrapper.scss
@@ -11,15 +11,13 @@
   }
 
   .highscore-box {
-    position: relative;
-
+    @include media-breakpoint-down(xs) {
+      margin-left: auto;
+    }
     .highscore-wrapper {
-      margin-bottom: 0;
-
       .highscore-ico {
         font-size: 1.5rem;
         font-style: normal;
-        margin-bottom: -3px;
       }
     }
   }
@@ -30,8 +28,6 @@
     }
     transition: transform 0.5s;
     .fb-share-wrapper {
-      margin-bottom: 0; //overwrite bootstrap reboot
-
       .fb-ico {
         background-color: var(--primary);
         color: #fff;
