--- a/scss/_header-top-wrapper.scss
+++ b/scss/_header-top-wrapper.scss
@@ -1,7 +1,15 @@
 .header-top-wrapper {
+  color: #fff;
   a {
     color: $white;
     text-decoration: none;
+  }
+
+  .new-game {
+    color: $primary;
+    &:hover {
+      color: white;
+    }
   }
 
   .fb-box:hover {
